A million bugs squashed

--- a/client/src/pages/workpage/workpage.styles.css
+++ b/client/src/pages/workpage/workpage.styles.css
@@ -1,4 +1,4 @@
-.work {
-  padding-top: 200px;
-  text-align: center;
+.wcard-container {
+	padding-top: 200px;
+	text-align: center;
 }
